www/static/css/awesome.css
/*
 * custom css
 */
 
a:hover, a:active {
	text-decoration: none;
}
 
#vm {

}
 
#loading {
	margin-bottom: 15px;
}
 
#error {
	display: none;
	margin-bottom: 15px;
}
 

